deleted:    css/main copy.css 	modified:   css/main.css 	modified:   erotique.html 	new file:   "images/La Bourgeoise et le N\303\251cessiteux.png" 	new file:   images/Margarethe.png 	new file:   images/Partageuse de fesses s01.png 	new file:   images/Section 69.png 	deleted:    index copy 2.html 	deleted:    index copy.html 	modified:   index.html 	modified:   js/util1.js 	new file:   lecteur.html 	modified:   recherche.html

--- a/css/main.css
+++ b/css/main.css
@@ -1430,3 +1430,21 @@ section,
     color: #7f8c8d;
     margin-bottom: 10px;
 }
+
+
+
+#pdf-container {
+    width: 100%;
+    /* Occupe toute la largeur disponible */
+    margin: 20px 0;
+    /* Espace autour du conteneur */
+}
+
+#pdf-frame {
+    width: 100%;
+    /* L'iframe occupera toute la largeur du conteneur */
+    height: 100vh;
+    /* S'ajuste à la hauteur de la fenêtre */
+    border: none;
+    /* Pas de bordure autour de l'iframe */
+}
