modified:   css/main.css 	modified:   erotique.html 	deleted:    "images/Capture d\342\200\231\303\251cran_26-9-2024_41829_.jpeg" 	new file:   "images/Cohabitation forc\303\251e.jpg" 	deleted:    images/img1.jpg 	deleted:    images/img3.jpg 	deleted:    images/img5.jpg 	deleted:    images/imgq.jpeg 	deleted:    images/logo.png 	deleted:    images/menu-backgroud.jpg 	new file:   images/smooth .jpg 	modified:   index.html 	modified:   lecteur.html 	modified:   recherche.html 	modified:   tarif.html

--- a/css/main.css
+++ b/css/main.css
@@ -1485,3 +1485,53 @@ section,
 .aide-item a:hover {
     text-decoration: none;
 }
+
+
+
+
+
+
+
+.image-carousel {
+    overflow: hidden;
+    /* Cache le contenu en dehors du cadre */
+    position: relative;
+    width: 100%;
+    height: 267px;
+    /* Ajustez si besoin */
+    padding: 10px 0;
+}
+
+.image-container {
+    display: flex;
+    animation: scroll 20s linear infinite;
+    height: 100%;
+}
+
+.rectangle {
+    height: 267px;
+    margin-right: 20px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+/* Styles adaptatifs pour s'assurer que le carrousel fonctionne sur mobile */
+@media (max-width: 768px) {
+    .rectangle {
+        height: 200px;
+    }
+
+    .image-container {
+        animation-duration: 30s;
+    }
+}
